# cpp-shm-excercise

./: .clang-format  CMakeLists.txt  README.md
example/: image_ipc.cpp  image_ipc.hpp  image_ipc_types.hpp  shared_data.h
test/: CMakeLists.txt  DummyTest.cpp
